# data_processing_comparison

./: .coverage  .gitignore  Data Processing API Workflow..pptx  README.md  main.py  pyproject.toml
app/: main.py
app/routers/: processing_router.py
app/services/: processing_service.py
processor/: aggregate.py  clean.py  load_data.py  url_load.py  vis_ceck
processor/utils/: logger.py  utils.py
tests/: test_processor.py
